Update STIX font to fix large operator vertical alignment

--- a/site/assets/Temml-STIX2.css
+++ b/site/assets/Temml-STIX2.css
@@ -8,8 +8,8 @@ https://github.com/stipub/stixfonts
 
 @font-face {
   font-family: STIX2;
-  src: local('STIXTwoMath-Regular'),
-       url('./STIXTwoMath-Regular.woff2');
+  src: local('STIXTwoMath'),
+       url('./STIXTwoMath.woff2');
 }
 
 math {
